--- a/index.html
+++ b/index.html
@@ -6,56 +6,54 @@
 </head>
 <body>
 
-<nav class="navbar">
+<header class="navbar">
   <div class="logo">LEVDIN</div>
-  <div class="nav-links">
+  <nav>
     <a href="index.html">Home</a>
-    <a href="booking.html">Book</a>
+    <a href="booking.html">Consultation</a>
     <a href="admin.html">Admin</a>
-  </div>
-</nav>
+  </nav>
+</header>
 
 <section class="hero">
-  <div class="overlay"></div>
   <div class="hero-content">
     <h1>WAY TO GO. DREAMS.</h1>
-    <p>Turning the Ordinary into the Extraordinary</p>
-    <a href="booking.html" class="btn-gold">Book Consultation</a>
+    <p>Luxury Interior. Smart Infrastructure. Timeless Design.</p>
+    <a href="booking.html" class="btn-primary">Book Private Consultation</a>
   </div>
 </section>
 
-<section class="about">
-  <h2>About LEVDIN</h2>
-  <p>
-    We are more than just an interior design firm. 
-    We transform spaces into luxury experiences.
-    From residential masterpieces to smart commercial infrastructures,
-    we redefine modern living.
+<section class="section">
+  <h2>Who We Are</h2>
+  <p class="section-text">
+    LEVDIN transforms ordinary spaces into extraordinary environments.
+    From luxury residential design to intelligent commercial infrastructure,
+    we redefine the experience of living and working.
   </p>
 </section>
 
-<section class="services">
+<section class="section dark">
   <h2>Our Expertise</h2>
 
-  <div class="service-grid">
+  <div class="grid">
     <div class="card">
-      <h3>Residential Interior</h3>
-      <p>Luxury homes crafted with elegance and precision.</p>
+      <h3>Residential Interiors</h3>
+      <p>High-end living spaces crafted with elegance and personality.</p>
     </div>
 
     <div class="card">
       <h3>Commercial Design</h3>
-      <p>Smart, functional and premium workspace solutions.</p>
+      <p>Functional & aesthetic business environments.</p>
     </div>
 
     <div class="card">
-      <h3>Smart IOT Systems</h3>
-      <p>Technology-driven modern living experiences.</p>
+      <h3>Smart IOT Integration</h3>
+      <p>Future-ready intelligent space automation.</p>
     </div>
 
     <div class="card">
       <h3>Custom Furniture</h3>
-      <p>Handcrafted timeless pieces built to inspire.</p>
+      <p>Handcrafted pieces built with timeless precision.</p>
     </div>
   </div>
 </section>
