--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
   <title>LEVDIN | Interior Design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-  <div class="logo">LEVDIN</div>
+  <div class="logo">
+    <img src="1019040936_hostinger_ai_5a096b5e.png" alt="LEVDIN Logo">
+  </div>
   <nav>
     <a href="index.html">Home</a>
     <a href="booking.html">Consultation</a>
@@ -16,6 +20,7 @@
 </header>
 
 <section class="hero">
+  <div class="overlay"></div>
   <div class="hero-content">
     <h1>WAY TO GO. DREAMS.</h1>
     <p>Luxury Interior. Smart Infrastructure. Timeless Design.</p>
@@ -23,7 +28,7 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section fade-up">
   <h2>Who We Are</h2>
   <p class="section-text">
     LEVDIN transforms ordinary spaces into extraordinary environments.
@@ -32,7 +37,7 @@
   </p>
 </section>
 
-<section class="section dark">
+<section class="section dark fade-up">
   <h2>Our Expertise</h2>
 
   <div class="grid">
@@ -63,6 +68,8 @@
 </footer>
 
 <a href="https://wa.me/917001064180" class="whatsapp">💬</a>
+
+<script src="app.js"></script>
 
 </body>
 </html>
